err/genomfart.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/genomfart'...
Listing './lib/python3.5/site-packages/genomfart/data'...
Listing './lib/python3.5/site-packages/genomfart/parsers'...
Listing './lib/python3.5/site-packages/genomfart/popgen'...
Compiling './lib/python3.5/site-packages/genomfart/popgen/genetic_relationship.py'...
***   File "./lib/python3.5/site-packages/genomfart/popgen/genetic_relationship.py", line 196
    print "%d markers processed..." % iter_count
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/genomfart/stats'...
Listing './lib/python3.5/site-packages/genomfart/test'...
Listing './lib/python3.5/site-packages/genomfart/test/parsers'...
Listing './lib/python3.5/site-packages/genomfart/test/utils'...
Listing './lib/python3.5/site-packages/genomfart/utils'...
Listing './lib/python3.5/site-packages/genomfart/utils/scripts'...
Listing './lib/python3.5/site-packages/genomfart-0.57.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
